# qrwatch

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PLANS.md  README.md  environment.yml  pyproject.toml  qrwatch.py
.skills/apply-harness-framework/: SKILL.md
.skills/apply-harness-framework/agents/: openai.yaml
.skills/apply-harness-framework/references/: doc-map.md
docs/: ENVIRONMENT.md  EVALUATION.md  GUARDRAILS.md  OBSERVABILITY.md  OPERATIONS.md  PACKAGING.md  QUALITY_SCORE.md  RELIABILITY.md  RUNTIME.md  SECURITY.md
docs/agent-roles/: followup-planner.md  implementer.md  maintenance-planner.md  reviewer.md  validator.md
docs/exec-plans/completed/: milestone-2-package-skeleton.md  milestone-3-qr-detection.md  milestone-3-screenshot-capture.md  (+5 more)
docs/product-specs/: language-conventions.md  time-conventions.md
docs/references/: HARNESS_ENGINEERING.md  README.md
evals/baselines/: smoke.json
packaging/: qrwatch.spec
references/: README.md  openai-harness-engineering.md
runtime/tasks/: TASK_SCHEMA.md
src/qrwatch/: __init__.py  __main__.py  app.py  background.py  capture.py  cli.py  config.py  events.py  logging.py  packaged.py  state.py  storage.py  tray.py
tests/: test_app.py  test_background.py  test_capture.py  test_cli.py  test_config.py  test_detectors.py  test_events.py  test_notifiers.py  test_packaged.py  test_state.py  test_storage.py
tests/fixtures/: qrwatch.env
tools/: build_windows_executable.ps1  entropy_control.py  harness_loop.py  run_evals.py  validate_guardrails.py  validate_harness_structure.py
(+11 files in other folders)
