[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qrwatch"
version = "0.1.0"
description = "Local Windows QR detection watcher."
requires-python = ">=3.11"

[project.scripts]
qrwatch = "qrwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
